--- a/03-ETL.Rmd
+++ b/03-ETL.Rmd
@@ -1,16 +1,6 @@
 # ETL - Using dplyr
 <div style='float: right; font-size:10px; margin-top: -20px; color: #ccc;'>Rafe C. H. Liu / Johnson Hsieh / George Chao, LastUpdate: 2018-07-16</div>
 
-```{r include=FALSE, cache=FALSE}
-library(knitr)      # dynamic report generation, RMarkdown
-library(ggplot2)    # data Viz
-library(reshape2)   # long and wide format
-library(data.table)   # long and wide format
-library(dplyr)
-options(width = 100)
-opts_chunk$set(echo = TRUE, comment="", message=FALSE, warning=FALSE)
-```  
-
 ## Data Cleaning
 
 - ETL (Extract-Transform-Load)
@@ -115,7 +105,7 @@ ubike[c(3:4), -c(6:21)]
 
 ```
 
--  Quiz: Conditional Slicing
+-  Quiz: Conditional Slicing，`%in%` 特殊演算子 (Special Operator) 表示？
 
 ```{r echo=TRUE,eval=FALSE}
 ubike[ubike$sna %in% c("台北市災害應變中心", "世貿三館"), ]
@@ -125,7 +115,7 @@ ubike[ubike$sna %in% c("台北市災害應變中心", "世貿三館"), ]
 ## Pipeline Style
 - 程式寫作
     - 壓縮的程式碼不易閱讀，展開的程式碼會產生很多暫存變數
-    - 套件 `magrittr` (`dplyr` 相依套件) 定義 `%>%` 特殊演算子 (Special Operator)，導入 *Pipeline* 的寫作方式，解決了這個問題
+    - 套件 `magrittr` (`dplyr` 相依套件) 定義 `%>%` 特殊演算子，導入 *Pipeline* 的寫作方式，解決了這個問題
     
 ```{r magrittr, echo = TRUE, results='hide'}
 # OLD school
@@ -149,7 +139,7 @@ ubike$sna %>%
     - 讓 R 使用者可以用更有彈性的方式來處理資料
     - 整合 `magrittr` pipeline
     - 針對 `data.frame` 做設計（名稱中的`d`）
-- **不會寫 Code 也要說的一嘴好 Code**
+- **講的一嘴好扣**
     - 將資料整理流程步驟化
     - 口語化的函式命名：`filter`, `arrange`...
     - 結合資料整理工具優點（ex. Excel, SQL）
@@ -179,13 +169,25 @@ vignette("introduction", package = "dplyr")
 ```{r echo = TRUE, eval=FALSE}
 library(dplyr)
 
+# reload the dataset
+ubike <- read.csv(file = "./data/ubike-weather-big5.csv",
+          colClasses = c("factor","integer","integer","factor","factor",
+                         "numeric","numeric","integer","numeric","integer",
+                         "integer","numeric","numeric", "integer","integer",
+                         "numeric","numeric","numeric", "numeric","numeric",
+                         "numeric", "numeric","numeric"), 
+          fileEncoding = 'BIG-5',
+          stringsAsFactors = F)
+
 head(ubike)
 
-select(ubike, hour, sarea, sna, avg.sbi) %>%
+ubike %>% 
+  select(hour, sarea, sna, avg.sbi) %>%
   filter(sarea == '中和區' & hour == 7) %>%
   mutate(avg.sbi = floor(avg.sbi)) 
 
-select(ubike, hour, sarea, sna, avg.sbi) %>%
+ubike %>%
+  select(hour, sarea, sna, avg.sbi) %>%
   filter(sarea == '中和區' & hour == 7) %>%
   group_by(hour, sarea, sna) %>%
   summarise(avg = mean(avg.sbi) %>% round()) %>%
@@ -436,6 +438,32 @@ WP.cast <- dcast(WP.melt, year ~ variable, value.var="value")
 ```{r, echo=FALSE}
 knitr::kable(WP.cast)
 ```
+
+## 綜合演練
+- 小明想知道信義區的腳踏車站晴天和雨天的使用率有何差別，提示：
+    - `filter`、`mutate`、`select`、`group_by`、`summarise`
+    - `dcast`
+    - `arrange`
+
+```{r}
+# WRITE YOUR CODE
+
+```
+
+```{r, echo = FALSE}
+ubike %>% filter(sarea == '信義區', hour == 8) %>% 
+  mutate(is.rain = rainfall > 1) %>%
+  mutate(is.rain = factor(is.rain, levels=c(FALSE, TRUE), 
+                        labels = c("晴天","雨天"))) %>%
+  select(date, avg.bemp, sna, is.rain, tot) %>%
+  group_by(sna, is.rain) %>%
+  summarise(use_rate = mean(avg.bemp/tot, na.rm = TRUE)) %>%
+  filter(is.na(is.rain) == F) %>%
+  dcast(sna ~ is.rain, value.var="use_rate") %>% 
+  arrange(desc(晴天)) %>% head(10) %>%
+  knitr::kable()
+```
+
 
 ## Cross Analysis
 
