--- a/03-ETL.Rmd
+++ b/03-ETL.Rmd
@@ -196,6 +196,9 @@ ubike %>%
 
 
 ### select
+```{r, echo=FALSE}
+library(dplyr)
+```
 ```{r, echo = TRUE, eval = FALSE}
 select(ubike, hour, sarea, sna, avg.sbi) 
 ```
