--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,6 @@
 --- 
 title: Data Thinking with R
+author: Rafe C.H. Liu (劉佳欣)
 site: bookdown::bookdown_site
 output:
   bookdown::gitbook:
@@ -42,17 +43,18 @@ favicon: "img/Blackvariant-Button-Ui-Requests-5-RStudio.ico"
 cover-image: null
 ---
 
-```{r setup, include=FALSE, cache=FALSE}
-library(knitr)      # dynamic report generation, RMarkdown
-library(ggplot2)    # data Viz
-library(reshape2)   # long and wide format
-opts_chunk$set(echo = TRUE, comment="", message=FALSE, warning=FALSE)
-```
-
-<div style="text-align: left; font-size: 1em; font-weight: 300; color: #3b3f54; font-style: italic; margin-top: 20px;">無傷痛零基礎也能懂的 R 程式語言<br> Chia-Hsin Liu</div>
-
 # Perface{-}
 
-- 介紹
-- 內容索引
-- 更新記錄
+- 資料思考 (Data Thinking) 
+    - 是結合顧客旅程圖 (Customer Journey Map) 的概念所建立的資料專案框架
+    - 資料思考應用框架結合商業流程與資料科學概念，有效從企業資料中提取有價值之數據，並輔助決策
+    - 協助團隊成員快速掌握領域知識，理解商業流程、發想分析問題，提高資料團隊成員溝通效率
+- 「自學」程式語言的能力
+    - 本教材是資料思考課程的一部分，介紹資料科學家最常用的 R 程式語言
+    - R 語言是屬於統計分析語言，與以往較偏工程使用之程式語言相較，R 語言貼近資料分析與口語易懂函式命名方式，相當適合無程式寫作經驗者學習
+    - 從 R 語言基礎開始，以一公開資料集貫穿資料分析流程，從資料取得、清理、探索、轉型、圖表整理、到使用 R 套件建立模型，協助學員快速進入資料科學領域
+- 關於教材
+    - 本教材為筆者於進修班授課、學界分享及企業導入資料科學顧問時使用，亦為筆者之健忘筆記，歡迎交流分享，勘誤指教請連繫 <a href="mailto:snexuz@gmail.com?subject=關於R教材">(Contact Info)</a>。
+    - 特別感謝一路上的教學夥伴：Johnson Hsieh / George Chao / Alto Lee / Noah Chen / Ning Chen / 
+Sheng Lin / Alger Yang 對於教材編寫之貢獻與指教
+    - 本教材使用 R + `library(bookdown)` 製作 
