--- a/index.Rmd
+++ b/index.Rmd
@@ -40,7 +40,7 @@ documentclass: book
 link-citations: yes
 favicon: "img/Blackvariant-Button-Ui-Requests-5-RStudio.ico"
 description: "資料思考 (Data Thinking) 是結合顧客旅程圖 (Customer Journey Map) 的概念所建立的資料專案框架，本教材是資料思考課程的一部分，介紹資料科學家最常用的 R 程式語言。"
-cover-image: "images/cover.png"
+cover-image: "img/cover.png"
 url: "http://chiahs.xyz/"
 ---
 
@@ -59,4 +59,4 @@ url: "http://chiahs.xyz/"
     - 特別感謝一路上的教學夥伴：Johnson Hsieh / George Chao / Alto Lee / Noah Chen / Ning Chen / 
 Sheng Lin / Alger Yang 對於教材編寫之貢獻與指教
     - 本教材使用 R + `library(bookdown)` 製作，封面使用 [O RLY Cover Generator](https://dev.to/rly)
-    - 本教材網址 [http://chiahs.xyz/](http://chiahs.xyz/)
+    - 本教材網址：[http://chiahs.xyz/](http://chiahs.xyz/)
