--- a/index.Rmd
+++ b/index.Rmd
@@ -56,10 +56,10 @@ url: "http\\://chiahs.xyz/"
     - 從 R 語言基礎開始，以一公開資料集貫穿資料分析流程，從資料取得、清理、探索、轉型、圖表整理、到使用 R 套件建立模型，協助學員快速進入資料科學領域
 - 關於教材
     - 本教材為筆者於進修班授課、學界分享及企業導入資料科學顧問時使用，亦為筆者之健忘筆記，歡迎交流分享，勘誤指教請連繫 <a href="mailto:snexuz@gmail.com?subject=關於R教材">(Contact Info)</a>。
-    - 特別感謝一路上的教學夥伴：Johnson Hsieh / George Chao / Alto Lee / Noah Chen / Ning Chen / 
+    - 特別感謝一路上的教學夥伴：Johnson Hsieh / George Chao / Alto Lee / Noah Chen / Ning Chen / Chih-Cheng Liang /
 Sheng Lin / Alger Yang 對於教材編寫之貢獻與指教
     - 本教材使用 R + `library(bookdown)` 製作，封面使用 [O RLY Cover Generator](https://dev.to/rly)
     - 本教材網址：[http://chiahs.xyz/](http://chiahs.xyz/)
-<p style="text-align: center;">
+<p style="text-align: center; margin-top: 30px;">
   <a href="mailto:snexuz@gmail.com?subject=關於R教材"><img src="img/cover.png" style="border: 1px solid #ccc;"></a>
 </p>
